Fix size of posts on tablet

--- a/_includes/atf_blog.scss
+++ b/_includes/atf_blog.scss
@@ -45,6 +45,10 @@
 .categoryItems .one-third.column {
   width: 100%;
 
+  @include mq($bp-larger-than-phablet) {
+    width: grid-column-width(6);
+  }
+
   @include mq($bp-larger-than-tablet) {
     width: grid-column-width(4);
   }
